--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "baseUrl": ".",
     "declaration": true,
     "paths": {
-      "react-native-svg": ["./src"],
-      "react-native-svg/css": ["./src/css/index.tsx"],
-      "react-native-svg/filter-image": ["./src/filter-image/index.tsx"]
+      "react-native-svg": ["./android/src"],
+      "react-native-svg/css": ["./android/src/css/index.tsx"],
+      "react-native-svg/filter-image": ["./android/src/filter-image/index.tsx"]
     },
     "preserveSymlinks": true,
     "target": "es6",
