--- a/android/build.gradle
+++ b/android/build.gradle
@@ -154,7 +154,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
+    implementation files("${rootDir}/../node_modules/react-native/android")
     if (REACT_NATIVE_MINOR_VERSION >= 76) {
         implementation("com.facebook.fresco:fresco:${FRESCO_VERSION}") {
             exclude group: 'com.facebook.soloader'
