--- a/android/build.gradle
+++ b/android/build.gradle
@@ -169,7 +169,14 @@ dependencies {
 
 
 android {
-    compileSdkVersion 33 // or a valid version
-    ...
+    compileSdkVersion 33
+
+    defaultConfig {
+        applicationId "com.example.app"
+        minSdkVersion 21
+        targetSdkVersion 33
+        versionCode 1
+        versionName "1.0"
+    }
 }
 
