--- a/android/build.gradle
+++ b/android/build.gradle
@@ -172,7 +172,7 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
-        applicationId "com.example.app"
+      //  applicationId "com.example.app"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
